--- a/index.html
+++ b/index.html
@@ -5,8 +5,49 @@
     <link href="./style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet" type="text/css">
   </head>
-
   <body>
+    <div class = "header" >
+<img src = "https://content.codecademy.com/projects/chore-door/images/logo.svg">
+    </div>
 
+    <div class = "title-row">
+<img src = "https://content.codecademy.com/projects/chore-door/images/star.svg" >
+<p class = "instructions-title">Instructions</p>
+<img src = "https://content.codecademy.com/projects/chore-door/images/star.svg" >
+    </div>
+
+    <table class = "instructions-row">
+  <tr>
+    <td class = "instructions-number">1</td>
+      <td class = "instructions-text">Hiding behind one of these doors is the ChoreBot.</td>
+  </tr>
+  <tr>
+    <td class = "instructions-number">2</td>
+      <td class = "instructions-text">Hiding behind one of these doors is the ChoreBot.</td>
+  </tr>
+  <tr>
+    <td class = "instructions-number" >3</td>
+      <td class = "instructions-text">If you manage to avoid the ChoreBot until you open the very last door, you win!</td>
+  </tr>
+  <tr>
+    <td class = "instructions-number">4</td>
+      <td class = "instructions-text">See if you can score a winning streak!</td>
+  </tr>
+</table>
+
+<div class = "door-row">
+  <img id="door1" class = door-frame img src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg"> 
+  <img id="door2" class = door-fame img src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg"> 
+  <img id="door3" class = door-frame  img src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg"> 
+</div>
+<div id = "start-row">
+  <div class = "start">
+Good luck!</div>
+</div>
+
+
+<script type="text/javascript" src="script.js"></script>
   </body>
+  
 </html>
+
